# bandcamp-dl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: api.rs  cache.rs  cli.rs  cookies.rs  error.rs  main.rs  middlewares.rs
src/api/: data.rs
src/data/fake/: bandcamp-collection-downloader.cache  parse-example.json
