[package]
name = "bandcamp-dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
reqwest = { version = "0.12.3", features = ["cookies"] }
cookie = "0.17"
cookie_store = "0.20"
reqwest_cookie_store = "0.7.0"
scraper = "0.19.0"
fastrand = "2.0.2"
regex-lite = "0.1.5"
anyhow = "1.0.82"
thiserror = "1.0.59"
clap = { version = "4.5.4", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_matches = "1.5"
test-case = "3.3.1"

[profile.release]
strip = true
lto = "thin"
opt-level = "z"
codegen-units = 1
incremental = true
